# cpp-template

./: .clang-tidy  .gitignore  CMakeLists.txt
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/inc/: hello.h
lib/src/: hello.cpp
